doc/logfile.txt

Project documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\Study\Documents\GitHub\airbnb
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\gluegen-rt.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\gluegen-rt-natives-windows-i586.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jcef.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jcef-tests.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jogl-all.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jogl-all-natives-windows-i586.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\commons-lang3-3.7.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\commons-text-1.2.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\gluegen-rt-natives-windows-i586.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\gluegen-rt.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jcef-tests.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jcef.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jogl-all-natives-windows-i586.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\jogl-all.jar;C:\Users\Study\Documents\GitHub\airbnb\+libs\opencsv-4.1.jar;C:\Users\Study\Documents\GitHub\airbnb
-d
C:\Users\Study\Documents\GitHub\airbnb\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
airbnb
-windowtitle
airbnb
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\Study\Documents\GitHub\airbnb/App.java
C:\Users\Study\Documents\GitHub\airbnb/PieChartController.java
C:\Users\Study\Documents\GitHub\airbnb/PropertyWindowController.java
C:\Users\Study\Documents\GitHub\airbnb/BoroughPriceRange.java
C:\Users\Study\Documents\GitHub\airbnb/CircularList.java
C:\Users\Study\Documents\GitHub\airbnb/BoroughButton.java
C:\Users\Study\Documents\GitHub\airbnb/MainWindow.java
C:\Users\Study\Documents\GitHub\airbnb/MainController.java
C:\Users\Study\Documents\GitHub\airbnb/PropertyWindowFactory.java
C:\Users\Study\Documents\GitHub\airbnb/ListingManipulator.java
C:\Users\Study\Documents\GitHub\airbnb/BoroughWindow.java
C:\Users\Study\Documents\GitHub\airbnb/RangeValues.java
C:\Users\Study\Documents\GitHub\airbnb/AirbnbDataLoader.java
C:\Users\Study\Documents\GitHub\airbnb/ContentContainerManager.java
C:\Users\Study\Documents\GitHub\airbnb/DrawingMapController.java
C:\Users\Study\Documents\GitHub\airbnb/CircularLinkedList.java
C:\Users\Study\Documents\GitHub\airbnb/StatController.java
C:\Users\Study\Documents\GitHub\airbnb/WindowHashSet.java
C:\Users\Study\Documents\GitHub\airbnb/ComboBoxOrderEnum.java
C:\Users\Study\Documents\GitHub\airbnb/PropertyWindow.java
C:\Users\Study\Documents\GitHub\airbnb/AlertManager.java
C:\Users\Study\Documents\GitHub\airbnb/BoroughWindowView.java
C:\Users\Study\Documents\GitHub\airbnb/MainView.java
C:\Users\Study\Documents\GitHub\airbnb/PropertyWindowView.java
C:\Users\Study\Documents\GitHub\airbnb/PriceRange.java
C:\Users\Study\Documents\GitHub\airbnb/QuantityVisualiser.java
C:\Users\Study\Documents\GitHub\airbnb/Borough.java
C:\Users\Study\Documents\GitHub\airbnb/StatView.java
C:\Users\Study\Documents\GitHub\airbnb/Hexagon.java
C:\Users\Study\Documents\GitHub\airbnb/WelcomeController.java
C:\Users\Study\Documents\GitHub\airbnb/PieChartView.java
C:\Users\Study\Documents\GitHub\airbnb/BoroughWindowController.java
C:\Users\Study\Documents\GitHub\airbnb/CircularArrayList.java
C:\Users\Study\Documents\GitHub\airbnb/Controller.java
C:\Users\Study\Documents\GitHub\airbnb/ListNode.java
C:\Users\Study\Documents\GitHub\airbnb/MapController.java
C:\Users\Study\Documents\GitHub\airbnb/RangeBoxEnum.java
C:\Users\Study\Documents\GitHub\airbnb/BoroughWindowFactory.java
C:\Users\Study\Documents\GitHub\airbnb/AirbnbListing.java
<---- end of javadoc command ---->
Loading source file C:\Users\Study\Documents\GitHub\airbnb\App.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\PieChartController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\PropertyWindowController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\BoroughPriceRange.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\CircularList.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\BoroughButton.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\MainWindow.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\MainController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\PropertyWindowFactory.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\ListingManipulator.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\BoroughWindow.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\RangeValues.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\AirbnbDataLoader.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\ContentContainerManager.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\DrawingMapController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\CircularLinkedList.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\StatController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\WindowHashSet.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\ComboBoxOrderEnum.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\PropertyWindow.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\AlertManager.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\BoroughWindowView.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\MainView.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\PropertyWindowView.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\PriceRange.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\QuantityVisualiser.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\Borough.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\StatView.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\Hexagon.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\WelcomeController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\PieChartView.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\BoroughWindowController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\CircularArrayList.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\Controller.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\ListNode.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\MapController.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\RangeBoxEnum.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\BoroughWindowFactory.java...
Loading source file C:\Users\Study\Documents\GitHub\airbnb\AirbnbListing.java...
Constructing Javadoc information...
C:\Users\Study\Documents\GitHub\airbnb\DrawingMapController.java:11: error: cannot find symbol
    @FXML SwingNode swingNode;
          ^
  symbol:   class SwingNode
  location: class DrawingMapController
1 error
